cursor pointer added to buttons

--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -21,6 +21,7 @@
     border: none;
     background-color: hsl(180, 100%, 25%);
     transition: 0.3s;
+    cursor: pointer;
 }
 
 .form__button:hover {
