--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -25,6 +25,7 @@
     height: 30px;
     padding: 0;
     transition: background-color 0.3s;
+    cursor: pointer;
 }
 
 .tasks__button--toggleDone {
